ingress/staging/ingress-staging.yaml
# ingress/staging/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress-staging
  namespace: petclinic-staging
  labels:
    name: petclinic-ingress-staging
spec:
  ingressClassName: nginx  
  rules:
    - host: petclinic-staging.22127210.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
